syntax = "proto3";

package proto;

service Mapper {
  rpc GetEmitResult(MapperRequest) returns (stream MapperResponse) {}
}

message MapperRequest {
  string key = 1;
  string value = 2;
}

message MapperResponse {
  string key = 1;
  string value = 2;
}


service MapperStream {
  rpc GetStreamEmitResult(stream MapperRequest) returns (stream MapperResponse) {}
}

